assets/css/style.css
/*I use Goole fonts for fonts*/
@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Montserrat:wght@100;200;300;400&family=Playfair+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=family=Playfair+Display&Roboto:wght@100,400;700&display=swap');


/* Reset */

* {
  margin: 0;
  padding: 0;
  border: 0;
}

body {
  font-family: 'Playfair Display', serif;
  color: #fafafa;
  padding: 0;
  margin: 0;
  /* padding-top: 74px; */


}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'DM Serif Display', serif;
  ;
}

p,
a {
  font-family: 'Montserrat', sans-serif;
  ;
}


a {
  text-decoration: none;
}

/* ULs */
ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

ul li {
  list-style: none;
}

ul li a {
  padding: 10px;
  display: inline-block;
  transition: color .25s ease-in-out;
}

ul li a:hover {
  color: #627a7b;
}

/*Nav bar dropdown menu*/
.dropbtn {
  font-family: 'Montserrat', serif;
  background-color: #101820;
  color: #fafafa;
  padding: 10px;
  font-size: inherit;
  border: none;
  text-align: center;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #101820;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  /* z-index: 1; */
}

.dropdown-content a {
  text-decoration: none;
  display: block;
}

.dropdown:hover .dropdown-content {
  display: block;
}


/* Grid system */

.container {
  width: 100%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
  width: 100%;
}

.column {
  text-align: center;
  flex-grow: 1;
  flex-shrink: 1;
  width: 100%;
  margin: 15px;
}


/* Card system */
.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.card-section {
  padding: 30px;

}

.card-section p:last-child {
  margin-bottom: 0;
}

/* Header */
.header {
  background-color: #101820;
  padding-top: 15px;
  padding-bottom: 15px;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
}

.header .logo a {
  color: #fafafa;
  font-size: 2rem;
  font-family: 'DM Serif Display', serif;
  ;
}

.header-nav a {
  color: #fafafa;
}

/* Hero */
.hero-outer {
  width: 100%;
  overflow: hidden;
  position: relative;
}

.hero-outer .row {
  justify-content: center;
}

.hero-text {
  padding-top: 150px;
  padding-bottom: 150px;
  position: relative;
  z-index: 1;
  color: #fafafa;
}

.hero-text h1 {
  font-size: 55px;
}

.hero-text h3 {
  font-size: large;
}


.hero-image {
  /*free to use image taken from https://pixabay.com/*/
  background-color: #627a7b;
  background-image: url("../images/hero-image.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-size: cover;
  z-index: -1;
}

.opaque-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
}

/*Welcome area*/
.welcome {
  padding-top: 25px;
  padding-bottom: 20px;
  margin-top: 0px;
  color: #333;
 
  }
.break-line {
  color: #627a7b;
  width: 300px;
  Border: 2px;
  border-style: solid;
  border-radius: 5px;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 25px;
  justify-content: center;
}
.welcome-text h3{
  font-size: medium;
  font-family: 'Montserrat', serif;
}
.welcome .row {
  justify-content: center;
}

/* Menus section */
.menus {
  padding-top: 0px;
  padding-bottom: 50px;
}
.menu-pics {
  width: 100%;
}
/*Reviews section*/
.reviews .card {
  color: #333;
}

.reviews .row {
  justify-content: center;
}

.reviews .reviews-slick {
  max-width: 100%;
}

.star-rating {
  color: gold;
}

/* Info section */
.info-outer {
  padding-top: 30px;
  padding-bottom: 30px;
  overflow: hidden;
  position: relative;
}

.column-menus {
  background-color: #627a7b;
  /*For this shadow I've used https://cssgenerator.org/box-shadow-css-generator.html*/
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
}

.column-info {
  background-color: #627a7b;
  color: #fafafa;
  /*For this shadow I've used https://cssgenerator.org/box-shadow-css-generator.html*/
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.6);
}



/*Footer*/
footer {
  /* height: 150px; */
  position: relative;
  overflow: hidden;
  background-color: #101820;
  color: #627a7b;
  text-align: center;
}

.social-networks {
  text-align: center;
  font-size: 200%;
  margin: 1%;
  padding: 10px;
  color: #627a7b;
}

.social-networks li {
  display: inline;
}

.social-networks a:visited, a:active {
  color: #627a7b;
}

.social-networks a:hover {
  color: #fafafa;
}

/*Links decorations*/
.call-us-link {
  border: 2px solid #fafafa;
  padding: 8px 20px;
  border-radius: 100px;
  color: #fafafa;
  transition: background-color .25s ease-in-out, border-color .25s ease-in-out;
}

.call-us-link:visited,
.call-us-link:active {
  color: #fafafa;
}

.call-us-link:hover {
  color: #fafafa;
  background-color: #101820;
  border-color: #101820;
}

.column-menus a:visited,
.column-menus a:active {
  color: #fafafa;
}

.column-menus a:hover {
  color: #101820;
}


/*------------------------------gallery-----------------------------*/
 



/*---------------------------- Media Queries------------------------*/

@media only screen and (max-width: 639px) {
  .grid-responsive {
    flex-direction: column;
  }
}

@media only screen and (min-width: 640px) {
  .grid-responsive {
    flex-direction: row;
  }
}

/*  Reusable grid columns */
@media only screen and (min-width: 0) and (max-width: 639px) {


  .m-col-3 {
    max-width: calc(33% - 30px);
  }

  .m-col-6 {
    max-width: calc(50% - 30px);
  }
}

@media only screen and (min-width: 640px) and (max-width: 1023px) {
  .t-col-3 {
    max-width: calc(33% - 30px);
  }

  .t-col-6 {
    max-width: calc(50% - 30px);
  }
}

@media only screen and (min-width: 1024px) {
  .d-col-3 {
    max-width: calc(33% - 30px);
  }

  .d-col-6 {
    max-width: calc(50% - 30px);
  }
}

